--- a/src/css/App.css
+++ b/src/css/App.css
@@ -18,6 +18,7 @@ body{
   box-shadow: 3px 1px 7px -1px rgba(74,70,74,0.8);
   padding: 20px 20px;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 .App__map{
   width: 65%;
@@ -29,11 +30,21 @@ body{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  cursor: pointer;
 }
+.card div p{
+  text-align: left;
+}
+.card div {
+  display: flex;
+}
+
+
 form{
   display: flex;
   justify-content: center;  
   align-items: center;
+  border-radius: 5px;
   margin: 30px;
 }
 .m-0{
@@ -71,6 +82,26 @@ form{
 .gm-style-iw-d{
   color: black;
 }
+.history{
+  position: absolute;
+  right: 50px;
+  top: 20vh;
+  z-index: 4;
+  background-color:white;
+  outline: none;
+}
+.history ul{
+  max-height: 200px;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+.history ul li:hover{
+  background-color: rgb(230, 230, 236);
+  transition: 1s;
+}
+.history ul li{
+  height: 40px;
+}
 @media screen and (max-width:768px){
   .App__map{
     display: none;
@@ -79,3 +110,86 @@ form{
     width: 100%;
   }
 }
+/* .scroll {
+  scrollbar-color: transparent;
+  scrollbar-width: 5px;
+}
+.scroll::-webkit-scrollbar {
+  height: 10px;
+  width: 6px;
+  background-color: red;
+}
+.scroll::-webkit-scrollbar-corner {
+  background: #eaeaea;
+}
+.scroll::-webkit-scrollbar-thumb {
+  background: #d4d4d4;
+  border: 1px solid #eaeaea;
+}
+.scroll::-webkit-scrollbar-thumb:hover {
+  background: transparent;
+}
+.scroll::-webkit-scrollbar-track {
+  background-color: #eaeaea; 
+}
+*/
+
+/* 
+.perfect_scroll::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+	border-radius: 10px;
+	background-color: #CCCCCC;
+}
+
+.perfect_scroll::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.perfect_scroll::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #D62929;
+	background-image: -webkit-linear-gradient(90deg,
+											  transparent,
+											  rgba(0, 0, 0, 0.4) 50%,
+											  transparent,
+											  transparent)
+} */
+
+.history ul::-webkit-scrollbar-track,.perfect_scroll::-webkit-scrollbar-track
+ {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+ }
+ 
+.history ul::-webkit-scrollbar
+ {
+   width: 3px;
+   background-color: transparent;
+ }
+ .perfect_scroll::-webkit-scrollbar
+ {
+  width: 4px;
+  background-color: transparent;
+}
+ 
+.history ul::-webkit-scrollbar-thumb,.perfect_scroll::-webkit-scrollbar-thumb
+ {
+   background-color: rgb(136, 136, 153);
+ }
+ .hide{
+   display: none;
+ }
+ .rotate{
+  transform: rotate(90deg)!important;
+  transition: 1ms;
+ }
+ .round{
+   border-radius: 1.2em;
+   transition: 600ms;
+ }
